force-app/main/default/objects/Account/fields/Acronym__c.field-meta.xml
<CustomField>
    <fullName>Acronym__c</fullName>
    <description>JIRA SF-65</description>
    <label>Acronym</label>
    <length>25</length>
    <type>Text</type>
</CustomField>