force-app/main/default/objects/Account/fields/Collab_Logo_Text__c.field-meta.xml
<CustomField>
    <fullName>Collab_Logo_Text__c</fullName>
    <label>Collab Logo Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>