force-app/main/default/objects/Account/fields/Collaborator_Logo__c.field-meta.xml
<CustomField>
    <fullName>Collaborator_Logo__c</fullName>
    <formula>IF( ISBLANK(Website),
IMAGE(&quot;http://logo.clearbit.com/www.regeneron.com/&quot; , &quot; &quot;),
IMAGE( Collab_Logo_Text__c , &quot; &quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collaborator Logo</label>
    <type>Text</type>
</CustomField>