force-app/main/default/objects/Account/fields/Collaborator_Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>Collaborator_Logo_URL__c</fullName>
    <formula>IF( ISBLANK(Website),
&quot;http://logo.clearbit.com/www.regeneron.com/&quot;,
Collab_Logo_Text__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collaborator Logo URL</label>
    <type>Text</type>
</CustomField>