force-app/main/default/objects/Account/fields/Country_global__c.field-meta.xml
<CustomField>
    <fullName>Country_global__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>