force-app/main/default/objects/Account/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email address of the institution.</description>
    <inlineHelpText>Email address of the institution</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>