force-app/main/default/objects/Account/fields/US_Non_US__c.field-meta.xml
<CustomField>
    <fullName>US_Non_US__c</fullName>
    <label>US/Non-US</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-US</fullName>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>